# traffic-simulator

./: .gitignore  Instruction.docx  Presentation.pptx  city.json  events.db  pyproject.toml  run.sh
arduino/: arduino.ino
manual/: conf.typ  constants.typ  main.typ  style.typ  template.typ
manual/sections/: abstract.typ  annotation.typ  architecture.typ  environment.typ  intro.typ  questions.typ  steps.typ  title.typ
manual/sections/steps/: consts&utils.typ  entity.typ  entry.typ  mainwindow.typ  persistence.typ  world.typ
src/: app.py  arduino.py  constants.py  database.py  entities.py  main_window.py  persistence.py  types.py  utils.py  window.py  world.py
src/grid/: __init__.py  defs.py  objects.py  persistence.py  scene.py  view.py
src/panels/: __init__.py  control_panel.py  properties_panel.py
src/qt_visual_utils/: __init__.py  constants.py  entities.py  persistence.py  types.py  utils.py  window.py  world.py
src/qt_visual_utils/panels/: control_panel.py  properties_panel.py
src/widgets/: __init__.py  control_panel.py  properties_panel.py
